<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic__home_green_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_data"
        android:icon="@drawable/ic_data_green_24"
        android:title="@string/title_data" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_green_24"
        android:title="@string/title_profile" />

</menu>