...
            app:layout_constraintBottom_toBottomOf="@+id/rectangle3"
            app:layout_constraintEnd_toEndOf="@+id/rectangle3"
            app:layout_constraintStart_toStartOf="@+id/rectangle3"
            app:layout_constraintTop_toBottomOf="@+id/temperatureTime3" />

        <TextView
            android:id="@+id/seeMoreTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seeMore"
            android:layout_marginRight="20dp"
            android:textColor="#000"
            app:layout_constraintBottom_toBottomOf="parent"
...
            app:layout_constraintBottom_toBottomOf="@+id/rectangleHumidity3"
            app:layout_constraintEnd_toEndOf="@+id/rectangleHumidity3"
            app:layout_constraintStart_toStartOf="@+id/rectangleHumidity3"
            app:layout_constraintTop_toBottomOf="@+id/humidityTime3" />

        <TextView
            android:id="@+id/seeMoreHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seeMore"
            android:layout_marginRight="20dp"
            android:textColor="#000"
            app:layout_constraintBottom_toBottomOf="parent"
...
            app:layout_constraintBottom_toBottomOf="@+id/rectangleCO23"
            app:layout_constraintEnd_toEndOf="@+id/rectangleCO23"
            app:layout_constraintStart_toStartOf="@+id/rectangleCO23"
            app:layout_constraintTop_toBottomOf="@+id/CO2Time3" />

        <TextView
            android:id="@+id/seeMoreCO2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seeMore"
            android:layout_marginRight="20dp"
            android:textColor="#000"
            app:layout_constraintBottom_toBottomOf="parent"
...
