<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bigGraph"
    tools:context=".ui.graph.GraphFragment">


            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
...
                <RadioButton
                    android:id="@+id/weeklyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Weekly"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/monthlyButton"
                    app:layout_constraintStart_toEndOf="@+id/dailyButton"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioButton
                    android:id="@+id/monthlyButton"
                    android:layout_width="wrap_content"
...
