<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/profileItem"
    android:padding="20dp"
    app:cardCornerRadius="15dp"
    android:layout_marginBottom="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
...
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_green"
            android:fontFamily="@font/nunito_semibold"
            android:text="Edit" />

        <Button
            android:id="@+id/RemoveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remove"
            android:fontFamily="@font/nunito_semibold"
            android:backgroundTint="@color/red"/>

...
