...
            android:background="@drawable/profile_dialog_button"
            android:minWidth="210dp"
            android:orientation="horizontal"
            android:padding="12dp">

            <Button
                android:id="@+id/applyButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:background="@drawable/profile_dialog_apply"
                android:text="Apply"
...
